Made the disabled state on turbo first pass more apparent on Dark theme.

--- a/VidCoder/View/Panels/VideoPanel.xaml
+++ b/VidCoder/View/Panels/VideoPanel.xaml
@@ -347,6 +347,7 @@
 						Content="{x:Static res:EncodingRes.TurboFirstPassCheckBox}"
 						IsChecked="{Binding TurboFirstPass}"
 						IsEnabled="{Binding TurboFirstPassEnabled}"
+						Style="{StaticResource GrayOnDisabledControl}"
 						Visibility="{Binding TurboFirstPassVisible,
 						                     Converter={StaticResource VisibilityConverter}}" />
 				</Grid>
