--- a/VidCoder/Controls/InlineWarning.xaml
+++ b/VidCoder/Controls/InlineWarning.xaml
@@ -4,8 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <Border
-            Background="#F7F7CD"
-            BorderBrush="LightGray"
+            Background="{DynamicResource InlineWarningBackgroundBrush}"
+            BorderBrush="Gray"
             BorderThickness="1"
             CornerRadius="4"
             Padding="3">
