--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -2,6 +2,7 @@
 	x:Class="VidCoder.View.LogWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:vidCoder="clr-namespace:VidCoder"
 	Title="{x:Static res:LogRes.LogWindowTitle}"
@@ -15,8 +16,56 @@
 	TextOptions.TextFormattingMode="Display"
 	WindowStyle="ToolWindow">
 	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition
+				Name="listColumn"
+				Width="150"
+				MinWidth="70"
+				MaxWidth="250" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+
+		<ListBox
+			Background="{DynamicResource AlternateBackgroundBrush}"
+			ItemsSource="{Binding LogCoordinator.LogsBindable}"
+			ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="*" />
+						</Grid.ColumnDefinitions>
+
+						<TextBlock
+							Grid.Column="0"
+							Margin="4 4 0 4"
+							Text="{Binding OperationTypeDisplay}" />
+
+						<controls:PathTextBlock
+							Grid.Column="1"
+							Margin="0 4 4 4"
+							Text="{Binding OperationPath}" />
+					</Grid>
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
+
+		<GridSplitter
+			Grid.Column="0"
+			Width="4"
+			HorizontalAlignment="Right"
+			VerticalAlignment="Stretch"
+			Background="{DynamicResource SplitterBrush}"
+			Canvas.ZIndex="4"
+			ShowsPreview="True"
+			Visibility="{Binding PresetPanelOpen,
+			                     Converter={StaticResource VisibilityConverter}}" />
+
+
 		<RichTextBox
 			Name="logTextBox"
+			Grid.Column="1"
 			Margin="0 0 0 36"
 			IsReadOnly="True"
 			VerticalScrollBarVisibility="Auto">
@@ -32,6 +81,7 @@
 		</RichTextBox>
 		<Button
 			Name="copyButton"
+			Grid.Column="1"
 			Height="24"
 			MinWidth="68"
 			Margin="0 0 127 7"
@@ -49,6 +99,7 @@
 		</Button>
 
 		<Button
+			Grid.Column="1"
 			Height="23"
 			MinWidth="75"
 			Margin="0 0 12 7"
