Made a "General" logger * All messages not associated with an encode or scan are directed there * Added to log list automatically

--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -28,7 +28,8 @@
 		<ListBox
 			Background="{DynamicResource AlternateBackgroundBrush}"
 			ItemsSource="{Binding LogCoordinator.LogsBindable}"
-			ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+			ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+			SelectedItem="{Binding LogCoordinator.SelectedLog}">
 			<ListBox.ItemTemplate>
 				<DataTemplate>
 					<Grid>
