--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -9,7 +9,7 @@
 	xmlns:converters="clr-namespace:VidCoder.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:fluent="urn:fluent-ribbon"
-	xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+	xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
 	xmlns:layoutPanels="clr-namespace:VidCoder.LayoutPanels"
 	xmlns:local="clr-namespace:VidCoder"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -2104,3 +2104,4 @@
 		</Grid>
 	</Grid>
 </Window>
+
