Moved tool bar for log window to top. Prevented re-opening log writer when it's been closed. Re-enabled Copy command. Removed in-memory log store. Removed Clear command.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -663,7 +663,7 @@
 								Margin="0 8 0 0"
 								Padding="3"
 								HorizontalAlignment="Left"
-								Command="{Binding OpenLogFolder}"
+								Command="{Binding LogCoordinator.OpenLogFolder}"
 								Content="{x:Static res:OptionsRes.OpenLogFolderButton}" />
 						</StackPanel>
 
