--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -3,18 +3,23 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:vidCoder="clr-namespace:VidCoder"
+	xmlns:viewModel="clr-namespace:VidCoder.ViewModel"
 	Title="{x:Static res:LogRes.LogWindowTitle}"
 	Width="459"
 	Height="393"
 	MinWidth="220"
 	MinHeight="95"
+	d:DataContext="{d:DesignInstance viewModel:LogWindowViewModel}"
 	Closing="Window_Closing"
 	ShowInTaskbar="False"
 	Style="{StaticResource NormalWindow}"
 	TextOptions.TextFormattingMode="Display"
-	WindowStyle="ToolWindow">
+	WindowStyle="ToolWindow"
+	mc:Ignorable="d">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition
@@ -65,50 +70,62 @@
 			Visibility="{Binding PresetPanelOpen,
 			                     Converter={StaticResource VisibilityConverter}}" />
 
+		<Grid Grid.Column="1">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="*" />
+			</Grid.RowDefinitions>
 
-		<RichTextBox
-			Name="logTextBox"
-			Grid.Column="1"
-			Margin="0 0 0 36"
-			IsReadOnly="True"
-			VerticalScrollBarVisibility="Auto">
-			<FlowDocument Name="logDocument">
-				<FlowDocument.Resources>
-					<!--  Eliminate blank line between paragraphs  -->
-					<Style TargetType="{x:Type Paragraph}">
-						<Setter Property="Margin" Value="0" />
-					</Style>
-				</FlowDocument.Resources>
-				<Paragraph Name="logParagraph" />
-			</FlowDocument>
-		</RichTextBox>
-		<Button
-			Name="copyButton"
-			Grid.Column="1"
-			Height="24"
-			MinWidth="68"
-			Margin="0 0 127 7"
-			HorizontalAlignment="Right"
-			VerticalAlignment="Bottom"
-			AutomationProperties.Name="{x:Static res:CommonRes.Copy}"
-			Command="{Binding Copy}">
-			<StackPanel Margin="5 0" Orientation="Horizontal">
-				<Image
-					Width="16"
-					Height="16"
-					Source="/Icons/copy.png" />
-				<TextBlock Margin="4 0 0 0" Text="{x:Static res:CommonRes.Copy}" />
-			</StackPanel>
-		</Button>
+			<ToolBarPanel
+				Grid.Row="0"
+				Margin="-5 -1 -14 -1"
+				HorizontalAlignment="Stretch"
+				VerticalAlignment="Top"
+				UseLayoutRounding="True">
+				<ToolBar
+					Background="{DynamicResource ToolBarBackgroundBrush}"
+					KeyboardNavigation.TabNavigation="Continue"
+					Loaded="ToolBar_Loaded"
+					ToolBarTray.IsLocked="True">
+					<Button
+						Height="24"
+						MinWidth="70"
+						Margin="4 0 0 0"
+						Padding="5 0"
+						AutomationProperties.Name="{x:Static res:CommonRes.Copy}"
+						Command="{Binding Copy}">
+						<StackPanel Orientation="Horizontal">
+							<Image
+								Width="16"
+								Height="16"
+								Source="/Icons/copy.png" />
+							<TextBlock Margin="5 0 0 0" Text="{x:Static res:CommonRes.Copy}" />
+						</StackPanel>
+					</Button>
+					<Button
+						Height="24"
+						MinWidth="70"
+						Padding="5 0"
+						Command="{Binding LogCoordinator.OpenLogFolder}"
+						Content="{x:Static res:OptionsRes.OpenLogFolderButton}" />
+				</ToolBar>
+			</ToolBarPanel>
 
-		<Button
-			Grid.Column="1"
-			Height="23"
-			MinWidth="75"
-			Margin="0 0 12 7"
-			HorizontalAlignment="Right"
-			VerticalAlignment="Bottom"
-			Command="{Binding ClearLog}"
-			Content="{x:Static res:LogRes.ClearButton}" />
+			<RichTextBox
+				Name="logTextBox"
+				Grid.Row="1"
+				IsReadOnly="True"
+				VerticalScrollBarVisibility="Auto">
+				<FlowDocument Name="logDocument">
+					<FlowDocument.Resources>
+						<!--  Eliminate blank line between paragraphs  -->
+						<Style TargetType="{x:Type Paragraph}">
+							<Setter Property="Margin" Value="0" />
+						</Style>
+					</FlowDocument.Resources>
+					<Paragraph Name="logParagraph" />
+				</FlowDocument>
+			</RichTextBox>
+		</Grid>
 	</Grid>
 </Window>
