Removed Advanced tab. It had not been updated in years, is missing a ton of options, bad defaults, inaccurate tooltips and no protection from invalid settings. The recommended way to alter these settings is now through the More Options box and referring to up-to-date documentation on the settings: https://en.wikibooks.org/wiki/MeGUI/x264_Settings

--- a/VidCoder/View/Panels/VideoPanel.xaml
+++ b/VidCoder/View/Panels/VideoPanel.xaml
@@ -401,38 +401,15 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition />
 			</Grid.RowDefinitions>
-			<StackPanel
+			<TextBlock
 				Grid.Row="0"
 				Margin="7 7 0 0"
 				HorizontalAlignment="Left"
 				VerticalAlignment="Top"
-				Orientation="Horizontal">
-				<TextBlock
-					VerticalAlignment="Center"
-					Style="{StaticResource SectionHeader}"
-					Text="{x:Static res:EncodingRes.EncoderSettings}" />
-				<RadioButton
-					Margin="25 2 0 0"
-					Content="{x:Static res:EncodingRes.X264SettingsRadioButtonBasic}"
-					GroupName="advancedTab1"
-					IsChecked="{Binding UseAdvancedTab,
-					                    Converter={StaticResource InverseBoolConverter}}"
-					Visibility="{Binding X264SettingsVisible,
-					                     Converter={StaticResource VisibilityConverter}}" />
-				<RadioButton
-					Margin="15 2 0 0"
-					Content="{x:Static res:EncodingRes.X264SettingsRadioButtonAdvanced}"
-					GroupName="advancedTab2"
-					IsChecked="{Binding UseAdvancedTab}"
-					Visibility="{Binding X264SettingsVisible,
-					                     Converter={StaticResource VisibilityConverter}}" />
-			</StackPanel>
+				Style="{StaticResource SectionHeader}"
+				Text="{x:Static res:EncodingRes.EncoderSettings}" />
 
-			<Grid
-				Grid.Row="1"
-				Margin="16 0 8 6"
-				Visibility="{Binding BasicEncoderSettingsVisible,
-				                     Converter={StaticResource VisibilityConverter}}">
+			<Grid Grid.Row="1" Margin="16 0 8 6">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition />
@@ -608,7 +585,11 @@
 							Grid.Row="1"
 							Margin="0 8 0 0"
 							HorizontalAlignment="Stretch"
-							VerticalAlignment="Stretch">
+							VerticalAlignment="Stretch"
+							Style="{StaticResource LongToolTipHolder}">
+							<Grid.ToolTip>
+								<TextBlock Style="{StaticResource LongToolTip}" Text="{Binding MoreOptionsTooltip}" />
+							</Grid.ToolTip>
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition />
