--- a/VidCoder/Themes/Dark.xaml
+++ b/VidCoder/Themes/Dark.xaml
@@ -14,6 +14,7 @@
 	<SolidColorBrush x:Key="DescriptiveTextBrush" Color="#999999" />
 	<SolidColorBrush x:Key="MouseOverBackgroundBrush" Color="#1E4B60" />
 	<SolidColorBrush x:Key="MouseOverOverlayBackgroundBrush" Color="#33FFFFFF" />
+	<SolidColorBrush x:Key="PressedOverlayBackgroundBrush" Color="#44FFFFFF" />
 	<SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#2A6884" />
 	<SolidColorBrush x:Key="PopupInfoBackgroundBrush" Color="#333333" />
 	<SolidColorBrush x:Key="InlineWarningBackgroundBrush" Color="#68680D" />
